@@ -1,3 +1,8 @@
+2016-06-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added configuration validator, resolves #59250
+	* Harmonized naming of "ctrl" properties, resolves #76607
+
 2016-06-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added wizard for Scheduler tasks migration, resolves #76017
